--- a/static/login.css
+++ b/static/login.css
@@ -1,81 +1,110 @@
-/* Center the form in the middle of the screen */
-.form-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50%;
-    max-width: 500px;
-    padding: 40px;
-    box-sizing: border-box;
-    border-radius: 10px;
-    background-color: #f2f2f2;
-    box-shadow: 0px 0px 10px #888888;
+/* Login Form */
+#login-form {
+    width: 100%;
+    margin: 50px auto;
+    background-color: #f7f7f7;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    padding: 20px;
+    border-radius: 5px;
 }
 
-/* Style the form header */
-.form-header {
-    margin-bottom: 20px;
+#login-form h1 {
     text-align: center;
+    font-size: 30px;
+    margin-top: 0;
 }
 
-.form-header h2 {
-    font-weight: bold;
-    font-size: 2em;
-    margin-bottom: 10px;
-}
-
-/* Style the input fields */
-.form-input {
+#login-form input[type="text"],
+#login-form input[type="password"],
+#login-form input[type="email"] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
-    box-sizing: border-box;
-    border: none;
+    display: inline-block;
+    border: 1px solid #ccc;
     border-radius: 4px;
-    background-color: white;
+    box-sizing: border-box;
 }
 
-.form-input:focus {
-    outline: none;
-    box-shadow: 0px 0px 5px #888888;
-}
-
-/* Style the submit button */
-.form-submit {
+#login-form button[type="submit"] {
     background-color: #4CAF50;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
+    padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     width: 100%;
-    font-size: 1.2em;
 }
 
-.form-submit:hover {
+#login-form button[type="submit"]:hover {
     background-color: #45a049;
 }
 
-/* Style the sign up link */
-.form-signup {
+#login-form a {
+    color: #333;
+    display: block;
     text-align: center;
+    margin-top: 20px;
 }
 
-.form-signup a {
-    color: #4CAF50;
+/* Signup Form */
+#signup-form {
+    width: 100%;
+    margin: 50px auto;
+    background-color: #f7f7f7;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    padding: 20px;
+    border-radius: 5px;
 }
 
-.form-signup a:hover {
-    text-decoration: underline;
+#signup-form h1 {
+    text-align: center;
+    font-size: 30px;
+    margin-top: 0;
 }
 
-/* Style the image */
-.login-image {
-    height: 100vh;
-    background-image: url("https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80");
-    background-size: cover;
-    background-position: center;
+#signup-form input[type="text"],
+#signup-form input[type="password"],
+#signup-form input[type="email"] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+#signup-form button[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+}
+
+#signup-form button[type="submit"]:hover {
+    background-color: #45a049;
+}
+
+#signup-form a {
+    color: #333;
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+}
+
+/* Background Image */
+.login-background {
+    background-image: url('https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80');
     background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 50%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: -1;
 }
