--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,35 +1,37 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% extends 'base.html' %}
-
-{% block content %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Sign Up</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
-    </head>
-    <body>
-        <div class="form-container">
-            <div class="form-header">
-                <h2>Login</h2>
-            </div>
-            <form action="{{ url_for('login') }}" method="POST">
-                <label for="email"><b>Email</b></label>
-                <input type="text" placeholder="Enter Email" name="email" class="form-input" required>
+<head>
+	<title>Sign Up</title>
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login.css') }}">
+</head>
+<body>
+	<div class="container">
+		<div class="form-container">
+			<h2>Sign Up</h2>
+			<form>
+				<label for="name">Name</label>
+				<input type="text" id="name" name="name" placeholder="Enter your name">
 
-                <label for="password"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="password" class="form-input" required>
+				<label for="email">Email</label>
+				<input type="email" id="email" name="email" placeholder="Enter your email">
 
-                <button type="submit" class="form-submit">Login</button>
-            </form>
-            <div class="form-signup">
-                <p>Already have an account? <a href="{{ url_for('login') }}">Login</a></p
-				</div>
-			</div>
-		</body>	
-	</html>	
-{% endblock %}
+				<label for="password">Password</label>
+				<input type="password" id="password" name="password" placeholder="Enter your password">
 
+				<label for="confirm-password">Confirm Password</label>
+				<input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password">
+
+				<button type="submit">Sign Up</button>
+			</form>
+			<p>Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
+		</div>
+		<div class="image-container">
+			<img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1480&q=80">
+		</div>
+	</div>
+</body>
+</html>
 {% endblock %}
